--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,24 +8,29 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     style="@style/screen_margin">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
+
         <TextView
             android:id="@+id/welcome_message"
+            style="@style/text_display"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/text_display"
             android:text="@string/welcome_message" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/color_code_input_wraper"
+            style="@style/text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/text_input"
             android:hint="@string/color_code_input_message">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/color_code_input_field"
                 android:layout_width="match_parent"
@@ -33,11 +38,12 @@
                 android:inputType="text"
                 android:maxLength="6" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/submit_button"
+            style="@style/button"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            style="@style/button"
-            android:text="@string/submit_button"/>
+            android:text="@string/submit_button" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
